--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,7 @@
   "json.schemaValidation.enable": false,
   "json.schemas": [],
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true,
+    "source.organizeImports": "explicit",
     "source.fixAll.eslint": "explicit"
   },
   "json.schemaDownload.enable": false
