--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^12.0.2",
     "tailwindcss": "^3.4.3",
+    "terser": "^5.44.0",
     "typescript": "~5.8.3",
     "vite": "^5.1.6"
   }
